style: :lipstick: css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/base/variables.css" >
     <link rel="stylesheet" href="./css/utils/keyframes.css" >
     <link rel="stylesheet" href="./css/styles.css" >
-    <link rel="stylesheet" href="./css/fonts.css" >
+    <link rel="stylesheet" href="./css/font/font.css" >
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
